// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser while statements nested 1`] = `
Array [
  While {
    "body": Block {
      "location": Object {
        "end": Object {
          "column": 12,
          "line": 8,
        },
        "file": "",
        "start": Object {
          "column": 26,
          "line": 2,
        },
      },
      "statements": Array [
        While {
          "body": Block {
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 6,
              },
              "file": "",
              "start": Object {
                "column": 30,
                "line": 3,
              },
            },
            "statements": Array [
              While {
                "body": Block {
                  "location": Object {
                    "end": Object {
                      "column": 43,
                      "line": 4,
                    },
                    "file": "",
                    "start": Object {
                      "column": 35,
                      "line": 4,
                    },
                  },
                  "statements": Array [
                    Increment {
                      "token": Object {
                        "isReserved": false,
                        "kind": "PlusPlus",
                        "literal": undefined,
                        "location": Object {
                          "end": Object {
                            "column": 40,
                            "line": 4,
                          },
                          "file": "",
                          "start": Object {
                            "column": 38,
                            "line": 4,
                          },
                        },
                        "text": "++",
                      },
                      "type": "Increment",
                      "value": Variable {
                        "name": Object {
                          "isReserved": false,
                          "kind": "Identifier",
                          "literal": undefined,
                          "location": Object {
                            "end": Object {
                              "column": 38,
                              "line": 4,
                            },
                            "file": "",
                            "start": Object {
                              "column": 37,
                              "line": 4,
                            },
                          },
                          "text": "k",
                        },
                        "type": "Variable",
                      },
                    },
                  ],
                  "type": "Block",
                },
                "condition": Binary {
                  "left": Variable {
                    "name": Object {
                      "isReserved": false,
                      "kind": "Identifier",
                      "literal": undefined,
                      "location": Object {
                        "end": Object {
                          "column": 27,
                          "line": 4,
                        },
                        "file": "",
                        "start": Object {
                          "column": 26,
                          "line": 4,
                        },
                      },
                      "text": "k",
                    },
                    "type": "Variable",
                  },
                  "right": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 34,
                        "line": 4,
                      },
                      "file": "",
                      "start": Object {
                        "column": 30,
                        "line": 4,
                      },
                    },
                    "type": "Literal",
                    "value": Int32 {
                      "kind": 4,
                      "value": 1000,
                    },
                  },
                  "token": Object {
                    "isReserved": false,
                    "kind": "Less",
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": 29,
                        "line": 4,
                      },
                      "file": "",
                      "start": Object {
                        "column": 28,
                        "line": 4,
                      },
                    },
                    "text": "<",
                  },
                  "type": "Binary",
                },
                "tokens": Object {
                  "endWhile": Object {
                    "isReserved": false,
                    "kind": "EndWhile",
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": 52,
                        "line": 4,
                      },
                      "file": "",
                      "start": Object {
                        "column": 43,
                        "line": 4,
                      },
                    },
                    "text": "end while",
                  },
                  "while": Object {
                    "isReserved": true,
                    "kind": "While",
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": 25,
                        "line": 4,
                      },
                      "file": "",
                      "start": Object {
                        "column": 20,
                        "line": 4,
                      },
                    },
                    "text": "while",
                  },
                },
                "type": "While",
              },
              Increment {
                "token": Object {
                  "isReserved": false,
                  "kind": "PlusPlus",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 23,
                      "line": 5,
                    },
                    "file": "",
                    "start": Object {
                      "column": 21,
                      "line": 5,
                    },
                  },
                  "text": "++",
                },
                "type": "Increment",
                "value": Variable {
                  "name": Object {
                    "isReserved": false,
                    "kind": "Identifier",
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": 21,
                        "line": 5,
                      },
                      "file": "",
                      "start": Object {
                        "column": 20,
                        "line": 5,
                      },
                    },
                    "text": "j",
                  },
                  "type": "Variable",
                },
              },
            ],
            "type": "Block",
          },
          "condition": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 23,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 22,
                    "line": 3,
                  },
                },
                "text": "j",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": 30,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 26,
                  "line": 3,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 1000,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Less",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 25,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 24,
                  "line": 3,
                },
              },
              "text": "<",
            },
            "type": "Binary",
          },
          "tokens": Object {
            "endWhile": Object {
              "isReserved": false,
              "kind": "EndWhile",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 25,
                  "line": 6,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 6,
                },
              },
              "text": "end while",
            },
            "while": Object {
              "isReserved": true,
              "kind": "While",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 21,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 3,
                },
              },
              "text": "while",
            },
          },
          "type": "While",
        },
        Increment {
          "token": Object {
            "isReserved": false,
            "kind": "PlusPlus",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": 19,
                "line": 7,
              },
              "file": "",
              "start": Object {
                "column": 17,
                "line": 7,
              },
            },
            "text": "++",
          },
          "type": "Increment",
          "value": Variable {
            "name": Object {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 17,
                  "line": 7,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 7,
                },
              },
              "text": "i",
            },
            "type": "Variable",
          },
        },
      ],
      "type": "Block",
    },
    "condition": Binary {
      "left": Variable {
        "name": Object {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 18,
              "line": 2,
            },
          },
          "text": "i",
        },
        "type": "Variable",
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": 26,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 22,
            "line": 2,
          },
        },
        "type": "Literal",
        "value": Int32 {
          "kind": 4,
          "value": 1000,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": "Less",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 21,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 2,
          },
        },
        "text": "<",
      },
      "type": "Binary",
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 21,
            "line": 8,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 8,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 17,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 2,
          },
        },
        "text": "while",
      },
    },
    "type": "While",
  },
]
`;

exports[`parser while statements while with exit 1`] = `
Array [
  While {
    "body": Block {
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": BrsString {
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
          "type": "Print",
        },
        ExitWhile {
          "tokens": Object {
            "exitWhile": Object {
              "isReserved": false,
              "kind": "ExitWhile",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "exit while",
            },
          },
          "type": "ExitWhile",
        },
      ],
      "type": "Block",
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "type": "Literal",
      "value": BrsBoolean {
        "kind": 2,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
    "type": "While",
  },
]
`;

exports[`parser while statements while without exit 1`] = `
Array [
  While {
    "body": Block {
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": BrsString {
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
          "type": "Print",
        },
      ],
      "type": "Block",
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "type": "Literal",
      "value": BrsBoolean {
        "kind": 2,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
    "type": "While",
  },
]
`;
